# rs-eip-adapter

./: .gitignore  Cargo.toml  LICENSE  README.md
cip-macros/: Cargo.toml
cip-macros/src/: cip_attribute.rs  cip_class.rs  cip_instance.rs  cip_object.rs  cip_utils.rs  lib.rs
cip-macros/tests/: integration.rs
cip-macros/tests/cip/: mod.rs  object.rs
cip-macros/tests/ui/: cip_attribute_duplicate_id.rs  cip_attribute_duplicate_id.stderr  cip_attribute_invalid_id_type.rs  cip_attribute_invalid_id_type.stderr  cip_class_missing_id.rs  cip_class_missing_id.stderr  cip_class_missing_instances.rs  cip_class_missing_instances.stderr  (+22 more)
examples/simple-eip-adapter/: Cargo.toml
src/: cip.rs  eip_stack.rs  encap.rs  lib.rs  main.rs  transport.rs
src/cip/: cip_class.rs  cip_error.rs  cip_identity.rs  common.rs  data_types.rs  registry.rs  tcp_ip_interface.rs
src/common/: binary.rs
src/encap/: broadcast_handler.rs  command.rs  cpf.rs  error.rs  handler.rs  header.rs  list_identity.rs  payload.rs  session_handler.rs  session_manager.rs
src/transport/: codec.rs  tcp.rs  tcp_connection.rs  udp.rs  udp_codec.rs
tests/: broadcast_handler.rs  broadcast_protocol_errors_e2e.rs  broadcast_robustness_e2e.rs  encap_handler.rs  list_identity_e2e.rs  protocol_errors_e2e.rs  udp_discovery_robustness_e2e.rs
tests/common/: eip_stack.rs  mod.rs  tcp.rs  udp.rs
tests/e2e/: list_identity_e2e.rs  mod.rs  nop_e2e.rs  register_session_e2e.rs  udp_discovery_robustness_e2e.rs  udp_protocol_errors_e2e.rs  unregister_session_e2e.rs
tests/integration/: encapsulation_handler.rs  mod.rs
(+20 files in other folders)
